<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Existing Tags:"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/tagsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/createTagButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Tag"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/clearFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clear Filter"
        android:visibility="gone" />

</LinearLayout>